<resources>
    <string name="app_name">Kabod App</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="button_login">Login</string>
    <string name="text_signup"><u>No account? Go to Signup.</u></string>
    <string name="action_logout">Logout</string>
    <string name="hint_name">Name</string>
    <string name="hint_phone">Phone</string>
    <string name="button_signup">Signup</string>
    <string name="text_login"><u>Already have an account? Go to Login</u></string>
    <string name="action_profile">Profile</string>
    <string name="button_update">Update</string>
    <string name="button_delete">Delete Account</string>
    <string name="status">Status</string>
    <string name="chats">Chats</string>

    <string name="hello_status_update_fragment">Hello status update fragment</string>
    <string name="hello_chats_fragment">Hello chats fragment</string>
    <string name="hello_status_fragment">Hello status fragment</string>
    <string name="send_button_text">Send</string>
    <string name="hint_message">Type message</string>
    <string name="test">Hi.\nHow are you? \nWhat are you up to today?</string>
    <string name="button_update_status">Update Status</string>
    <string name="hint_status">Status note</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
</resources>
