<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">


   <androidx.core.widget.NestedScrollView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:fillViewport="true"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintEnd_toEndOf="parent">

       <RelativeLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent">
           <ImageView
               android:id="@+id/imageView"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_centerHorizontal="true"
               android:src="@drawable/kabod1_icon"
               android:layout_marginLeft="@dimen/grid_3"
               android:layout_marginStart="@dimen/grid_3"
               android:layout_marginRight="@dimen/grid_3"
               android:layout_marginEnd="@dimen/grid_3"
               android:layout_marginTop="@dimen/grid_3"/>

           <com.google.android.material.textfield.TextInputLayout
               android:id="@+id/emailTIL"
               android:layout_width="@dimen/standard_width"
               android:layout_height="wrap_content"
               android:layout_below="@id/imageView"
               android:layout_centerHorizontal="true"
               android:layout_marginLeft="@dimen/grid_3"
               android:layout_marginStart="@dimen/grid_3"
               android:layout_marginRight="@dimen/grid_3"
               android:layout_marginEnd="@dimen/grid_3"
               android:layout_marginTop="@dimen/grid_3">

               <com.google.android.material.textfield.TextInputEditText
                   android:id="@+id/emailET"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:inputType="textEmailAddress"
                   android:hint="@string/hint_email"/>

           </com.google.android.material.textfield.TextInputLayout>

           <com.google.android.material.textfield.TextInputLayout
               android:id="@+id/passwordTIL"
               android:layout_width="@dimen/standard_width"
               android:layout_height="wrap_content"
               android:layout_below="@id/emailTIL"
               android:layout_centerHorizontal="true"
               android:layout_marginLeft="@dimen/grid_3"
               android:layout_marginStart="@dimen/grid_3"
               android:layout_marginRight="@dimen/grid_3"
               android:layout_marginEnd="@dimen/grid_3"
               android:layout_marginTop="@dimen/grid_3">

               <com.google.android.material.textfield.TextInputEditText
                   android:id="@+id/passwordET"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:inputType="textPassword"
                   android:hint="@string/hint_password"/>

           </com.google.android.material.textfield.TextInputLayout>

           <Button
               android:id="@+id/buttonLogin"
               android:layout_width="@dimen/standard_width"
               android:layout_height="@dimen/standard_height"
               android:text="@string/button_login"
               android:layout_below="@id/passwordTIL"
               style="@style/StandardButton"
               android:onClick="onLogin"
               android:layout_centerHorizontal="true"
               android:layout_marginLeft="@dimen/grid_3"
               android:layout_marginStart="@dimen/grid_3"
               android:layout_marginRight="@dimen/grid_3"
               android:layout_marginEnd="@dimen/grid_3"
               android:layout_marginTop="@dimen/grid_3"/>

           <TextView
               android:id="@+id/signupTV"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_below="@id/buttonLogin"
               android:layout_centerHorizontal="true"
               android:layout_marginTop="@dimen/grid_3"
               android:layout_marginBottom="@dimen/grid_3"
               android:clickable="true"
               style="@style/LinkText"
               android:onClick="onSignup"
               android:text="@string/text_signup"/>

       </RelativeLayout>
   </androidx.core.widget.NestedScrollView>

   <LinearLayout
       android:id="@+id/progressLayout"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintLeft_toLeftOf="parent"
       app:layout_constraintRight_toRightOf="parent"
       android:orientation="vertical"
       android:gravity="center"
       android:background="@color/colorLightGrey"
       android:visibility="gone">

       <ProgressBar
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"/>

   </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
